services/cerebro/k8s/cerebro.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cerebro
  namespace: logging
  labels:
    component: elk
    role: cerebro
spec:
  selector:
    component: elk
    role: cerebro
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 9000
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cerebro
  namespace: logging
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
    - host: cerebro.internal.carlosedp.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cerebro
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cerebro-external
  namespace: logging
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
    - host: cerebro.cloud.carlosedp.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cerebro
              servicePort: 80
